--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -18,6 +18,7 @@
     "artifactName": "${productName}-Mac-${version}-Installer.${ext}"
   },
   "win": {
+    "icon": "build/btc.ico",
     "target": [
       {
         "target": "nsis",
