--- a/.github/workflows/BuildAndPackage.yml
+++ b/.github/workflows/BuildAndPackage.yml
@@ -29,7 +29,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: v22.21.0
-
+      - name: 安装electron-builder
+        run: npm i -g electron-builder
       - name: Build/release Electron app
         uses: samuelmeuli/action-electron-builder@v1
         with:
