--- a/.github/workflows/qodana_code_quality.yml
+++ b/.github/workflows/qodana_code_quality.yml
@@ -8,8 +8,10 @@ on:
   workflow_dispatch:
   pull_request:
   push:
-    branches:
-      - main
+    tags:
+      - '*'
+    #branches:
+    #  - main
 
 jobs:
   qodana:
