--- a/.github/workflows/BuildAndPackage.yml
+++ b/.github/workflows/BuildAndPackage.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           node-version: v22.21.0
       - name: 安装electron-builder
-        run: npm i -g electron-builder
+        run: yarn global add electron-builder
       - name: Build/release Electron app
         uses: samuelmeuli/action-electron-builder@v1
         with:
