--- a/.github/workflows/BuildAndPackage.yml
+++ b/.github/workflows/BuildAndPackage.yml
@@ -30,8 +30,7 @@ jobs:
         with:
           node-version: v22.21.0
       - name: Install dependencies
-        run: |  yarn install
-          yarn global add electron-builder
+        run: yarn install && yarn global add electron-builder
       - name: Build/release Electron app
         uses: samuelmeuli/action-electron-builder@v1
         with:
