--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@electron/fuses": "^1.0.0",
     "@vitejs/plugin-vue": "^5.0.4",
     "electron": "38.4.0",
+    "electron-builder": "^26.0.12",
     "typescript": "^5.2.2",
     "vite": "^5.1.6",
     "vite-plugin-electron": "^0.28.6",
