--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -18,7 +18,7 @@
     "artifactName": "${productName}-Mac-${version}-Installer.${ext}"
   },
   "win": {
-    "icon": "public/btc.ico",
+    "icon": "public/btc.png",
     "target": [
       {
         "target": "nsis",
