--- a/.github/workflows/BuildAndPackage.yml
+++ b/.github/workflows/BuildAndPackage.yml
@@ -32,7 +32,7 @@ jobs:
         run: yarn install && yarn global add electron-builder
 
       - name: Build Electron app
-        run: yarn dist  # 使用 electron-builder 构建
+        run: yarn build  # 使用 electron-builder 构建
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
