--- a/.github/workflows/BuildAndPackage.yml
+++ b/.github/workflows/BuildAndPackage.yml
@@ -58,7 +58,7 @@ jobs:
         id: create_release
         uses: actions/create-release@v2
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.github_token }}
         with:
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
@@ -68,7 +68,7 @@ jobs:
       - name: Upload release assets
         uses: actions/upload-release-asset@v2
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.github_token }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./downloaded-artifacts/**/*
