--- a/.github/workflows/BuildAndPackage.yml
+++ b/.github/workflows/BuildAndPackage.yml
@@ -8,7 +8,6 @@ on:
 env:
   ACTIONS_RUNNER_DEBUG: true
   ACTIONS_STEP_DEBUG: true
-  GH_TOKEN: ${{ secrets.GH_TOKEN }}  # 添加 GitHub Token
 permissions:
   contents: write
 
@@ -59,8 +58,7 @@ jobs:
         id: create_release
         uses: actions/create-release@v2
         env:
-          GITHUB_TOKEN: ${{ secrets.github_token }}
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}  # 添加 GitHub Token
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # 使用默认的 GITHUB_TOKEN
         with:
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
@@ -70,8 +68,7 @@ jobs:
       - name: Upload release assets
         uses: actions/upload-release-asset@v2
         env:
-          GITHUB_TOKEN: ${{ secrets.github_token }}
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}  # 添加 GitHub Token
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # 使用默认的 GITHUB_TOKEN
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./downloaded-artifacts/**/*
