--- a/.github/workflows/BuildAndPackage.yml
+++ b/.github/workflows/BuildAndPackage.yml
@@ -33,6 +33,8 @@ jobs:
 
       - name: Build Electron app
         run: yarn build  # 使用 electron-builder 构建
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # 明确传递默认 Token
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
