上传脚本修改14

--- a/.github/workflows/BuildAndPackage.yml
+++ b/.github/workflows/BuildAndPackage.yml
@@ -2,10 +2,10 @@ name: BuildAndPackage
 
 on:
   push:
-    #tags:
-    #  - '*'
-    branches:
-      - main
+    tags:
+      - '*'
+    #branches:
+    #  - main
 
 env:
   ACTIONS_RUNNER_DEBUG: true
